Custom--app/main/default/objects/Tenant_App__c/fields/PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Email__c</fullName>
    <description>This field will be populated via a workflow rule and will enable us to have alerts to the PM since they are not actually the owner of the record.</description>
    <label>PM Email</label>
    <type>Email</type>
</CustomField>