Custom--app/main/default/objects/Tenant_App__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <formula>Listing__r.Pool__c</formula>
    <label>Pool</label>
    <type>Text</type>
</CustomField>