Custom--app/main/default/objects/Tenant_App__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <formula>IF (ISBLANK(Listing__c) = FALSE,  Listing__r.Portfolio__r.Owner:User.Full_Name__c, 
IF (ISBLANK(TIP_Record__c) = FALSE, TIP_Record__r.Portfolio__r.Owner:User.Full_Name__c , NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD</label>
    <type>Text</type>
</CustomField>