Custom--app/main/default/objects/Tenant_App__c/fields/Portfolio_Same_Store__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Same_Store__c</fullName>
    <label>Portfolio Same Store</label>
    <length>255</length>
    <type>Text</type>
</CustomField>