Custom--app/main/default/objects/Tenant_App__c/fields/Pre_Lease_Walk_Complete__c.field-meta.xml
<CustomField>
    <fullName>Pre_Lease_Walk_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Lease Walk Complete</label>
    <type>Checkbox</type>
</CustomField>