Custom--app/main/default/objects/Tenant_App__c/fields/Pre_Lease_Walk_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Lease_Walk_Completion_Date__c</fullName>
    <label>Pre-Lease Walk Completion Date</label>
    <type>Date</type>
</CustomField>