Custom--app/main/default/objects/Tenant_App__c/fields/Pre_Lease_Walk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Lease_Walk_Notes__c</fullName>
    <label>Pre-Lease Walk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>