Custom--app/main/default/objects/Tenant_App__c/fields/Primary_Application_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Primary_Application_Tracker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this application is for a secondary applicant, please use this field to connect this application tracking record to the application tracking record for the primary applicant.</inlineHelpText>
    <label>Primary Application Tracker</label>
    <referenceTo>Tenant_App__c</referenceTo>
    <relationshipLabel>Additional Applicants</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>