Custom--app/main/default/objects/Tenant_App__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <formula>IF( ISBLANK( Listing__c ) ,   TIP_Record__r.Property_City__c , Listing__r.Portfolio__r.Property_City__c)</formula>
    <label>Property City</label>
    <type>Text</type>
</CustomField>