Custom--app/main/default/objects/Tenant_App__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>IF( ISBLANK( Listing__c ) ,    TIP_Record__r.Property_State__c , Listing__r.Portfolio__r.Property_State__c)</formula>
    <label>Property State</label>
    <type>Text</type>
</CustomField>