Custom--app/main/default/objects/Tenant_App__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Listing__r.Zip_Code__c</formula>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>