Custom--app/main/default/objects/Tenant_App__c/fields/Proposed_Move_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Move_In_Date__c</fullName>
    <label>Proposed Move-In Date</label>
    <type>Date</type>
</CustomField>