Custom--app/main/default/objects/Tenant_App__c/fields/Prorate_Pet_Fee_Recv_d_Date__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Pet_Fee_Recv_d_Date__c</fullName>
    <label>Lease Section 1.12 Monies Recv’d Date</label>
    <type>Date</type>
</CustomField>