Custom--app/main/default/objects/Tenant_App__c/fields/Re_Key_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_Key_Completed_Date__c</fullName>
    <formula>Listing__r.Re_Key_Completed_Date__c</formula>
    <inlineHelpText>This date is being pulled from the Listing record.</inlineHelpText>
    <label>Re-Key Completed Date</label>
    <type>Date</type>
</CustomField>