Custom--app/main/default/objects/Tenant_App__c/fields/Reason_for_Sending_Revised_Lease__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Sending_Revised_Lease__c</fullName>
    <label>Reason for Sending Revised Lease</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rehab Date Change</fullName>
            </value>
            <value>
                <fullName>Resident Date Change</fullName>
            </value>
            <value>
                <fullName>Document Expired - Resident</fullName>
            </value>
            <value>
                <fullName>Addition/Removal of Pet</fullName>
            </value>
            <value>
                <fullName>Addition/Removal of Applicant or Occupant</fullName>
            </value>
            <value>
                <fullName>Lease Error – Market</fullName>
            </value>
            <value>
                <fullName>Market Date Change</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Lease Error – Lease Admin</fullName>
            </value>
            <value>
                <fullName>Voided - Market</fullName>
            </value>
            <value>
                <fullName>Voided - Resident</fullName>
            </value>
            <value>
                <fullName>Document Expired - Market</fullName>
            </value>
            <value>
                <fullName>Document Expired</fullName>
            </value>
            <value>
                <fullName>Lease Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>