Custom--app/main/default/objects/Tenant_App__c/fields/Renters_Insurance_Rec_d__c.field-meta.xml
<CustomField>
    <fullName>Renters_Insurance_Rec_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renters Insurance Rec'd</label>
    <type>Checkbox</type>
</CustomField>