Custom--app/main/default/objects/Tenant_App__c/fields/Request_HAP_Lease_Generation__c.field-meta.xml
<CustomField>
    <fullName>Request_HAP_Lease_Generation__c</fullName>
    <label>Request HAP Lease Generation</label>
    <type>DateTime</type>
</CustomField>