Custom--app/main/default/objects/Tenant_App__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <formula>Listing__r.Residence__r.Name</formula>
    <label>Residence</label>
    <type>Text</type>
</CustomField>