Custom--app/main/default/objects/Tenant_App__c/fields/Resident_Email__c.field-meta.xml
<CustomField>
    <fullName>Resident_Email__c</fullName>
    <label>Resident Email</label>
    <type>Email</type>
</CustomField>