Custom--app/main/default/objects/Tenant_App__c/fields/Resident_Phone__c.field-meta.xml
<CustomField>
    <fullName>Resident_Phone__c</fullName>
    <label>Resident Phone</label>
    <type>Phone</type>
</CustomField>