Custom--app/main/default/objects/Tenant_App__c/fields/Resident_Pre_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Resident_Pre_Qualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident Pre-Qualified?</label>
    <type>Checkbox</type>
</CustomField>