Custom--app/main/default/objects/Tenant_App__c/fields/Revised_Lease_Prepared_Sent__c.field-meta.xml
<CustomField>
    <fullName>Revised_Lease_Prepared_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revised Lease Prepared/Sent</label>
    <type>Checkbox</type>
</CustomField>