Custom--app/main/default/objects/Tenant_App__c/fields/Revised_Lease_Prepared_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Lease_Prepared_Sent_Date__c</fullName>
    <label>Revised Lease Prepared/Sent Date</label>
    <type>DateTime</type>
</CustomField>