Custom--app/main/default/objects/Tenant_App__c/fields/Scheduled_Move_In__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Move_In__c</fullName>
    <label>Scheduled Move-In Date</label>
    <type>Date</type>
</CustomField>