Custom--app/main/default/objects/Tenant_App__c/fields/Screened_Income_Meets_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Screened_Income_Meets_Requirement__c</fullName>
    <formula>IF( Screened_Monthly_Income_Amount__c > Min_Monthly_Income_Required__c , 'Yes', 'No')</formula>
    <label>Screened Income Meets Requirement?</label>
    <type>Text</type>
</CustomField>