Custom--app/main/default/objects/Tenant_App__c/fields/Screened_Monthly_Income_Amount__c.field-meta.xml
<CustomField>
    <fullName>Screened_Monthly_Income_Amount__c</fullName>
    <label>Screened Monthly Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>