Custom--app/main/default/objects/Tenant_App__c/fields/Screening_Recommendation_Received__c.field-meta.xml
<CustomField>
    <fullName>Screening_Recommendation_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screening Recommendation Received</label>
    <type>Checkbox</type>
</CustomField>