Custom--app/main/default/objects/Tenant_App__c/fields/Section_8__c.field-meta.xml
<CustomField>
    <fullName>Section_8__c</fullName>
    <label>Housing Authority Participant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>