Custom--app/main/default/objects/Tenant_App__c/fields/Section_8_Comments__c.field-meta.xml
<CustomField>
    <fullName>Section_8_Comments__c</fullName>
    <label>Housing Authority Comments</label>
    <type>TextArea</type>
</CustomField>