Custom--app/main/default/objects/Tenant_App__c/fields/Securitized_Asset__c.field-meta.xml
<CustomField>
    <fullName>Securitized_Asset__c</fullName>
    <formula>Listing__r.Securitized_Asset__c</formula>
    <label>Securitized Asset?</label>
    <type>Checkbox</type>
</CustomField>