Custom--app/main/default/objects/Tenant_App__c/fields/Sent_to_POD_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_POD_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to POD for Approval</label>
    <type>Checkbox</type>
</CustomField>