Custom--app/main/default/objects/Tenant_App__c/fields/Sent_to_POD_for_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_POD_for_Approval_Date__c</fullName>
    <label>Sent to POD for Approval Date</label>
    <type>Date</type>
</CustomField>