Custom--app/main/default/objects/Tenant_App__c/fields/Showing_Record__c.field-meta.xml
<CustomField>
    <fullName>Showing_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showing Record</label>
    <referenceTo>Showing__c</referenceTo>
    <relationshipLabel>Application Tracking</relationshipLabel>
    <relationshipName>Application_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>