Custom--app/main/default/objects/Tenant_App__c/fields/Sig_Lease_Rec_vd_Dt_to_Lease_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Sig_Lease_Rec_vd_Dt_to_Lease_Uploaded__c</fullName>
    <description>Signed Lease Rec'vd Date to Lease Uploaded Date</description>
    <formula>(Lease_Uploaded_Date__c - Signed_Lease_Rec_vd_Date__c )</formula>
    <inlineHelpText>Signed Lease Rec'vd Date to Lease Uploaded Date</inlineHelpText>
    <label>Signed Lease Rec'vd Dt to Lease Up(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>