Custom--app/main/default/objects/Tenant_App__c/fields/Signed_Lease_Rec_vd_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Lease_Rec_vd_Date__c</fullName>
    <label>Signed Lease Rec'vd Date</label>
    <type>DateTime</type>
</CustomField>