Custom--app/main/default/objects/Tenant_App__c/fields/Special_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Special_Promotion__c</fullName>
    <formula>Listing__r.Promotion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special/Promotion</label>
    <type>Text</type>
</CustomField>