Custom--app/main/default/objects/Tenant_App__c/fields/Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>Status_Comments__c</fullName>
    <label>File Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>