Custom--app/main/default/objects/Tenant_App__c/fields/Status_Ever_Been_Cancelled_or_Declined__c.field-meta.xml
<CustomField>
    <fullName>Status_Ever_Been_Cancelled_or_Declined__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this status ever been cancelled or declined?</inlineHelpText>
    <label>Status Ever Been Cancelled or Declined</label>
    <type>Checkbox</type>
</CustomField>