Custom--app/main/default/objects/Tenant_App__c/fields/Tenant_Application_Required__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Application_Required__c</fullName>
    <label>Tenant Application Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>