Custom--app/main/default/objects/Tenant_App__c/fields/Tenant_Screening_Required__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Screening_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tenant Screening Required</label>
    <referenceTo>HOA_Tracking__c</referenceTo>
    <relationshipLabel>Application Tracking (Tenant Screening Required)</relationshipLabel>
    <relationshipName>Application_Tracking1</relationshipName>
    <type>Lookup</type>
</CustomField>