Custom--app/main/default/objects/Tenant_App__c/fields/Terms_of_Lease_Months__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Lease_Months__c</fullName>
    <label>Terms of Lease (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>