Custom--app/main/default/objects/Tenant_App__c/fields/This_Week__c.field-meta.xml
<CustomField>
    <fullName>This_Week__c</fullName>
    <description>Scheduled Move-In Date (This Week)</description>
    <formula>IF(  FLOOR((TODAY() - DATE(1900,1,7))/7) == FLOOR((Lease_Start_Date_Agent_Verified__c - DATE(1900,1,7))/7) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Scheduled Move-In Date (This Week)</inlineHelpText>
    <label>THIS WEEK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>