Custom--app/main/default/objects/Tenant_App__c/fields/TIP_Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>TIP_Lease_Type__c</fullName>
    <label>TIP Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assumed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>