Custom--app/main/default/objects/Tenant_App__c/fields/TIP_Record__c.field-meta.xml
<CustomField>
    <fullName>TIP_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIP Record</label>
    <referenceTo>TIP_Tracking__c</referenceTo>
    <relationshipName>Tenant_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>