Custom--app/main/default/objects/Tenant_App__c/fields/Unit_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status_Updated__c</fullName>
    <inlineHelpText>Once this file is approved the Yardi status should be immediately updated to indicate the Property is no longer on the market</inlineHelpText>
    <label>Yardi Unit Status Updated Date</label>
    <type>DateTime</type>
</CustomField>