Custom--app/main/default/objects/Tenant_App__c/fields/Utility_Transfer_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Utility_Transfer_Confirmation_Date__c</fullName>
    <label>Utility Transfer Confirmation Date</label>
    <type>Date</type>
</CustomField>