Custom--app/main/default/objects/Tenant_App__c/fields/VOI_Completed__c.field-meta.xml
<CustomField>
    <fullName>VOI_Completed__c</fullName>
    <label>VOI Completed Date</label>
    <type>DateTime</type>
</CustomField>