Custom--app/main/default/objects/Tenant_App__c/fields/VOI_Completed_CheckBox__c.field-meta.xml
<CustomField>
    <fullName>VOI_Completed_CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VOI Completed</label>
    <type>Checkbox</type>
</CustomField>