Custom--app/main/default/objects/Tenant_App__c/fields/VOR_Completed__c.field-meta.xml
<CustomField>
    <fullName>VOR_Completed__c</fullName>
    <label>VOR Completed</label>
    <type>Date</type>
</CustomField>