Custom--app/main/default/objects/Tenant_App__c/fields/Yardi_Property_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Property_Code_Text__c</fullName>
    <inlineHelpText>This field is populated via workflow for Global Search purposes.</inlineHelpText>
    <label>Yardi Property Code Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>