Custom--app/main/default/objects/Tenant_App__c/recordTypes/AppTrack_2_0.recordType-meta.xml
<RecordType>
    <fullName>AppTrack_2_0</fullName>
    <active>true</active>
    <label>AppTrack 2.0</label>
</RecordType>