Custom--app/main/default/objects/Tenant_App__c/recordTypes/Listing_Additional_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Listing_Additional_Applicant</fullName>
    <active>true</active>
    <description>Use for additional adults who will be on the lease for active listings.</description>
    <label>Listing - Additional Applicant</label>
</RecordType>