Custom--app/main/default/objects/Tenant_App__c/recordTypes/Listing_Primary_Applicant.recordType-meta.xml
<RecordType>
    <fullName>Listing_Primary_Applicant</fullName>
    <active>true</active>
    <description>Use for the primary applicant on an active listing.</description>
    <label>Listing - Primary Applicant</label>
</RecordType>