Custom--app/main/default/objects/Tenant_App__c/recordTypes/TIP_Additional_Applicant.recordType-meta.xml
<RecordType>
    <fullName>TIP_Additional_Applicant</fullName>
    <active>true</active>
    <description>Use for additional adults who will be on the lease as part of a TIP new lease.</description>
    <label>TIP - Additional Applicant</label>
</RecordType>