Custom--app/main/default/objects/Tenant_App__c/recordTypes/TIP_Primary_Applicant.recordType-meta.xml
<RecordType>
    <fullName>TIP_Primary_Applicant</fullName>
    <active>true</active>
    <description>Use for the primary applicant on a TIP new lease.</description>
    <label>TIP - Primary Applicant</label>
</RecordType>