Custom--app/main/default/objects/Tenant_App__c/validationRules/Actual_Move_in_date_must_be_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Move_in_date_must_be_in_the_past</fullName>
    <active>true</active>
    <description>The "Actual Move-in Date" cannot be a future date</description>
    <errorConditionFormula>Actual_Move_in_Date__c > TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Move_in_Date__c</errorDisplayField>
    <errorMessage>The "Actual Move-in Date" cannot be a future date</errorMessage>
</ValidationRule>