Custom--app/main/default/objects/Tenant_App__c/validationRules/Additional_Income_Documents_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Income_Documents_Needed</fullName>
    <active>true</active>
    <description>Additional Income Documents Needed  before checking Notification to Agent Add'l Income Docs Needed</description>
    <errorConditionFormula>Notification_to_Agent_Add_l_Income_Docs__c == true &amp;&amp;    (ISBLANK(Additional_Income_Documents_Needed__c) || ISNULL(Additional_Income_Documents_Needed__c))</errorConditionFormula>
    <errorDisplayField>Additional_Income_Documents_Needed__c</errorDisplayField>
    <errorMessage>Please Enter Additional Income Documents</errorMessage>
</ValidationRule>