Custom--app/main/default/objects/Tenant_App__c/validationRules/Cancellation_Details_Require.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Details_Require</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Cancelled_Reason__c , 'Other'), 
ISBLANK(Cancellation_Details__c),
$Profile.Name != 'System Administrator'  
)</errorConditionFormula>
    <errorMessage>Put the notes in the Cancellation Details field.</errorMessage>
</ValidationRule>