Custom--app/main/default/objects/Tenant_App__c/validationRules/Cancelled_App_Requires_Cancelled_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancelled_App_Requires_Cancelled_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Application_Status__c , "Cancelled") || ISPICKVAL( Application_Status__c ,"Pending Cancellation") ) &amp;&amp;
ISPICKVAL(Cancelled_Reason__c , "")  &amp;&amp;
RecordType.DeveloperName = 'AppTrack_2_0'</errorConditionFormula>
    <errorDisplayField>Cancelled_Reason__c</errorDisplayField>
    <errorMessage>Cancelled Or Pending Cancellation applications require a cancellation Reason.</errorMessage>
</ValidationRule>