Custom--app/main/default/objects/Tenant_App__c/validationRules/Closed_Complete_Requires_Movein_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Complete_Requires_Movein_Date</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(File_Status__c , "Closed Complete") &amp;&amp; (ISBLANK(Actual_Move_in_Date__c) = TRUE || ISBLANK( Lease_Start_Date__c) = TRUE ||  ISBLANK(Lease_End_Date__c) = TRUE)</errorConditionFormula>
    <errorMessage>You cannot close this file as complete until you add the Move-In Date and all the lease details.</errorMessage>
</ValidationRule>