Custom--app/main/default/objects/Tenant_App__c/validationRules/Lease_Generation_type_required_when_sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Generation_type_required_when_sent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TRIM(TEXT(Lease_Generation_Type__c)) == '',
    Lease_Prepared_Sent__c ,
    $Profile.Name != 'System Administrator',
    OR( ISCHANGED(Lease_Generation_Type__c),
        ISCHANGED(Lease_Prepared_Sent__c),
        ISNEW())
    )</errorConditionFormula>
    <errorDisplayField>Lease_Generation_Type__c</errorDisplayField>
    <errorMessage>'Lease Generation Type' is a Required Field if 'Lease Prepared/Sent' box is checked</errorMessage>
</ValidationRule>