Custom--app/main/default/objects/Tenant_App__c/validationRules/Null_if_Status_is_Cancelled_or_Declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Null_if_Status_is_Cancelled_or_Declined</fullName>
    <active>true</active>
    <description>There cannot be a value in the Actual Move-In Date field if Application Status is Cancelled or Declined.</description>
    <errorConditionFormula>OR( ISPICKVAL( Application_Status__c , 'Cancelled') , ISPICKVAL( Application_Status__c , 'Declined')) 
 &amp;&amp; 
 NOT( ISBLANK( Actual_Move_in_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Actual_Move_in_Date__c</errorDisplayField>
    <errorMessage>There cannot be a value in the Actual Move-In Date field if Application Status is Cancelled or Declined.</errorMessage>
</ValidationRule>