Custom--app/main/default/objects/Tenant_App__c/validationRules/Pre_Lease_Walk_Completion_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Lease_Walk_Completion_Date_Required</fullName>
    <active>true</active>
    <description>Pre-Lease Walk Completion Date is required if the Pre-Lease Walk is complete.</description>
    <errorConditionFormula>Pre_Lease_Walk_Complete__c = TRUE &amp;&amp; 
ISBLANK( Pre_Lease_Walk_Completion_Date__c )</errorConditionFormula>
    <errorDisplayField>Pre_Lease_Walk_Completion_Date__c</errorDisplayField>
    <errorMessage>Pre-Lease Walk Completion Date is required if the Pre-Lease Walk is complete.</errorMessage>
</ValidationRule>