Custom--app/main/default/objects/Tenant_App__c/validationRules/Required_Opted_PointCentral_for_Agent.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Opted_PointCentral_for_Agent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(Opted_in_for_PointCentral_Smart_Home__c ),
$Profile.Name = 'IH - Leasing Agents (Internal Contractors 2.0)'
)</errorConditionFormula>
    <errorMessage>Opted in for PointCentral Smart Home field is mandatory.</errorMessage>
</ValidationRule>