Custom--app/main/default/objects/Tenant_App__c/validationRules/Requires_TIP_or_Listing.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_TIP_or_Listing</fullName>
    <active>true</active>
    <description>Each application tracking record must be connected to a TIP record or a Listing record.</description>
    <errorConditionFormula>ISBLANK( Listing__c) &amp;&amp; ISBLANK ( TIP_Record__c)</errorConditionFormula>
    <errorDisplayField>Days_Pro_Rated__c</errorDisplayField>
    <errorMessage>All Application Tracking records must have a linkage to a TIP record or a Listing record.</errorMessage>
</ValidationRule>