Custom--app/main/default/objects/Tenant_App__c/validationRules/Section_8_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Section_8_Required</fullName>
    <active>true</active>
    <errorConditionFormula>DATEVALUE(App_Received__c) > DATE(2013,08,29) &amp;&amp;
ISPICKVAL( Section_8__c ,"") &amp;&amp; 
$Profile.Name != 'System Administrator' &amp;&amp;
 RecordType.DeveloperName != 'AppTrack_2_0'</errorConditionFormula>
    <errorDisplayField>Section_8__c</errorDisplayField>
    <errorMessage>You must enter a value.</errorMessage>
</ValidationRule>