Custom--app/main/default/objects/Tenant_App__c/validationRules/Validation_Approved_Awaiting_Hold_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Approved_Awaiting_Hold_Fee</fullName>
    <active>true</active>
    <description>D-00016923</description>
    <errorConditionFormula>AND(OR(ISNEW(), ISCHANGED( Application_Status__c)) , 
     ISPICKVAL(Application_Status__c, 'Approved - Awaiting Hold Fee'), Hold_Fee_Rec_d__c 
      )</errorConditionFormula>
    <errorDisplayField>Hold_Fee_Rec_d__c</errorDisplayField>
    <errorMessage>Application Status Should Not Be Approved - Awaiting Hold Fee When Hold Fee Rec'd is Checked</errorMessage>
</ValidationRule>